<resources>
    <string name="app_name" translatable="false">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">SIGN IN</string>
    <string name="signup">Don\'t have an account? Sign Up!!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">email@example.com</string>
    <string name="signUp_button">SIGN UP</string>
    <string name="signUp_error_title">Oops!</string>
    <string name="signUp_error_message">Please make sure you enter a username, password and email address!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="login_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">No friends yet</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_error_message">We\'re sorry!</string>
    <string name="recover_password_button">RECOVER </string>
    <string name="check_mail_recover_password">Check your mail inbox</string>
    <string name="first_name_hint">First Name</string>
    <string name="hometown_hint">Home Town</string>
    <string name="last_name_hint">Last Name</string>
    <string name="title_activity_profile">Profile </string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a proble accessing \n your device\'s external storage</string>
    <string name="fail_create_directory">Failed to create directory</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_length_warning">You must select a video with size less than 10Mb</string>
    <string name="error_selecting_file">There was a problem with the selected file</string>
    <string name="file_size_alert">The selected file is too large!</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose recipients</string>
    <string name="empty_reciepients_list">Choose some friends first</string>
    <string name="Send">Send</string>
    <string name="error_creating_message">There was an error with the selected file. \n Please select a different one</string>
    <string name="message_sent">Message sent!</string>
    <string name="error_sending_message">There was an error sending the message. \n Please try again.</string>
    <string name="menu_message_label">Send Message</string>
    <string name="title_activity_message">Send Message</string>
    <string name="title_activity_view_image" translatable="false">Ribbit</string>
    <string name="send_date">Send </string>
    <string name="new_text_message_title">Nuevo mensaje</string>
    <string name="title_activity_view_text">Text message</string>
    <string name="message_from">Mensaje de </string>
    <string name="password">Password</string>
    <string name="contentDescriptionBackground">Ribbit Frog Background Image</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="subtitle">A self-destructing messages App!</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="buttonDivider_label">Button divider</string>
    <string name="error_mail">Must enter a valid email</string>
    <string name="parse_notification_message">You have a new message from</string>
    <string name="first_name_profile">First Name</string>
    <string name="last_name_profile">Last Name</string>
    <string name="username_profile">User Name</string>
    <string name="email_profile">eMail</string>
    <string name="hometown_profile">Home Town</string>
    <string name="singup">Sign Up</string>
    <string name="destroy_message">DESTROY</string>
    <string name="profile_back">VOLVER</string>

</resources>
