<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

      <item android:id="@+id/action_edit_friends"
            android:title="@string/edit_friends_label"
            android:orderInCategory="100"
            app:showAsAction="never"/>
      <item android:id="@+id/action_logout"
            android:title="@string/menu_logout_label"
            android:orderInCategory="200"
            app:showAsAction="never"/>
      <item android:id="@+id/action_camera"
            android:title="@string/menu_camera_label"
            android:orderInCategory="200"
            android:icon="@drawable/ic_menu_camera"
            app:showAsAction="always"/>
      <item android:id="@+id/action_text_message"
            android:title="@string/menu_message_label"
            android:orderInCategory="100"
            android:icon="@drawable/ic_ic_chat_bubble_outline_white_48dp"
            app:showAsAction="always"/>
</menu>
