<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground"
                tools:context="com.avalladares.ribbit.ui.activities.ForgotPasswordActivity">
    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailRecoverPasswordField"
            android:layout_below="@+id/passwordField"
            android:hint="@string/email_hint"
            style="@style/AuthEditText"/>
        </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/buttonDivider_label"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover_password_button"
        android:id="@+id/recoverPasswordButton"
        android:layout_marginRight="0dp"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"/>
    <Button
        android:text="@string/cancel_button_label"
        android:id="@+id/cancelButton"
        android:layout_marginLeft="0dp"
        style="@style/AuthButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotProgressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>
