<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_fill"
                tools:context="com.avalladares.ribbit.LoginActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundImage"
        android:contentDescription="@string/contentDescriptionBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/background"
        android:scaleType="fitStart"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"
        android:background="@android:color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            android:focusable="true"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp"/>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/loginButton"
        android:background="@drawable/button_custom"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:textColor="@color/text_color"
        android:layout_alignStart="@+id/backgroundImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:layout_marginTop="12dp"
        android:id="@+id/signupText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@android:color/white"
        android:id="@+id/forgotTextView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        />




</RelativeLayout>
